--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "homepage": "https://github.com/blanford-fox-2016/student-roster-db-from-schema#readme",
   "dependencies": {
     "sqlite3": "^3.1.6"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0"
   }
 }
