--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/blanford-fox-2016/student-roster-db-from-schema#readme",
   "dependencies": {
+    "babel-preset-es2015": "^6.16.0",
     "sqlite3": "^3.1.6"
-  }
+  },
+  "devDependencies": {}
 }
